--- a/templates/index.html
+++ b/templates/index.html
@@ -414,9 +414,7 @@
                 padding: 5px;
             }
         }
-    </style>
-</head>
-<body>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <div class="container">
         <div class="header">
             <h1>📅 Task Calendar</h1>
@@ -1142,6 +1140,4 @@
                 initializeSampleTasks();
             }
         }, 1000);
-    </script>
-</body>
-</html>
+    <script src="{{ url_for('static', filename='app.js') }}"></script>
